--- a/cart2.html
+++ b/cart2.html
@@ -58,8 +58,8 @@
     </div>
 
     <main>
-        <div class="wrapper-cart">
-            <div class="wrapper-cart2">
+        <div class="wrapper-cart2">
+            <div class="wrapper-cart2-center">
                 <div class="wrapper-cart-contain">
                     <!-- 左側 -->
                     <section class="cart-check-profile">
@@ -190,7 +190,7 @@
                                 </tr>
                             </tfoot>
                         </table>
-                        <div class="cart-login-notice" style="margin-top: 70px; padding: 0; background-color: transparent;">
+                        <div class="cart-login-notice2">
                             <h1>還不是會員嗎？立即加入享有以下優惠：</h1>
                             <ul>
                                 <li><i>累積點數：</i>消費可累積點數，一元累積一點，讓每一筆購物更有價值。</li>
@@ -211,7 +211,6 @@
             <i class="bi bi-arrow-bar-up"></i>
         </div>
     </main>
-
     <!-- footer -->
     <footer>
         <div class="footer-info">
