會員專區修改

--- a/member_logut.html
+++ b/member_logut.html
@@ -61,68 +61,77 @@
         <div class="member-banner">
             <a href="./login.html">立即登入以獲取您的會員資訊</a>
         </div>
-
-        <!-- <div class="member-level"> -->
         <div class="member-level-introduction">
             <h1>會員等級說明</h1>
             <div class="member-level-introduction-center">
-                <article>
-                    <h3><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-                            <path fill="currentColor"
-                                d="M15.5 2a3.5 3.5 0 0 1 3.437 4.163l-.015.066a4.502 4.502 0 0 1 .303 8.428l-1.086 6.507a1 1 0 0 1-.986.836H6.847a1 1 0 0 1-.986-.836l-1.029-6.17a3 3 0 0 1-.829-5.824L4 9a6 6 0 0 1 8.575-5.42A3.5 3.5 0 0 1 15.5 2M11 15H9v5h2zm4 0h-2v5h2zm2.5-2a2.5 2.5 0 1 0-.956-4.81l-.175.081a2 2 0 0 1-2.663-.804l-.07-.137A4 4 0 0 0 10 5C7.858 5 6.109 6.684 6.005 8.767L6 8.964l.003.17a2 2 0 0 1-1.186 1.863l-.15.059A1.001 1.001 0 0 0 5 13z" />
-                        </svg> 一般蛋糕</h3>
-                    <ul>
-                        <li>會員優惠：無</li>
-                        <li>升級方式：官網、各實體店面加入</li>
-                        <li>會員期限：無期限</li>
-                        <li>生日禮金：無 </li>
-                    </ul>
-                </article>
-
-                <article>
-                    <h3><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-                            <path fill="currentColor"
-                                d="M15.5 2a3.5 3.5 0 0 1 3.437 4.163l-.015.066a4.502 4.502 0 0 1 .303 8.428l-1.086 6.507a1 1 0 0 1-.986.836H6.847a1 1 0 0 1-.986-.836l-1.029-6.17a3 3 0 0 1-.829-5.824L4 9a6 6 0 0 1 8.575-5.42A3.5 3.5 0 0 1 15.5 2M11 15H9v5h2zm4 0h-2v5h2zm2.5-2a2.5 2.5 0 1 0-.956-4.81l-.175.081a2 2 0 0 1-2.663-.804l-.07-.137A4 4 0 0 0 10 5C7.858 5 6.109 6.684 6.005 8.767L6 8.964l.003.17a2 2 0 0 1-1.186 1.863l-.15.059A1.001 1.001 0 0 0 5 13z" />
-                        </svg> 銀白蛋糕</h3>
-                    <ul>
-                        <li>會員優惠：無</li>
-                        <li>升級方式：消費滿$300元以上</li>
-                        <li>使用通路：官網、各實體店面</li>
-                        <li>生日禮金：無 </li>
-                        <li>生日禮金：$100元購物金（當月30天有效）</li>
-                    </ul>
-                </article>
-
-                <article>
-                    <h3><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-                            <path fill="currentColor"
-                                d="M15.5 2a3.5 3.5 0 0 1 3.437 4.163l-.015.066a4.502 4.502 0 0 1 .303 8.428l-1.086 6.507a1 1 0 0 1-.986.836H6.847a1 1 0 0 1-.986-.836l-1.029-6.17a3 3 0 0 1-.829-5.824L4 9a6 6 0 0 1 8.575-5.42A3.5 3.5 0 0 1 15.5 2M11 15H9v5h2zm4 0h-2v5h2zm2.5-2a2.5 2.5 0 1 0-.956-4.81l-.175.081a2 2 0 0 1-2.663-.804l-.07-.137A4 4 0 0 0 10 5C7.858 5 6.109 6.684 6.005 8.767L6 8.964l.003.17a2 2 0 0 1-1.186 1.863l-.15.059A1.001 1.001 0 0 0 5 13z" />
-                        </svg> 黃金蛋糕</h3>
-                    <ul>
-                        <li>會員優惠：95折</li>
-                        <li>升級方式：消費滿$6000元</li>
-                        <li>使用通路：官網、各實體店面</li>
-                        <li>生日禮金：一年期限 </li>
-                        <li>生日禮金：$100元購物金（當月30天有效）</li>
-                    </ul>
-                </article>
-
-                <article>
-                    <h3><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-                            <path fill="currentColor"
-                                d="M15.5 2a3.5 3.5 0 0 1 3.437 4.163l-.015.066a4.502 4.502 0 0 1 .303 8.428l-1.086 6.507a1 1 0 0 1-.986.836H6.847a1 1 0 0 1-.986-.836l-1.029-6.17a3 3 0 0 1-.829-5.824L4 9a6 6 0 0 1 8.575-5.42A3.5 3.5 0 0 1 15.5 2M11 15H9v5h2zm4 0h-2v5h2zm2.5-2a2.5 2.5 0 1 0-.956-4.81l-.175.081a2 2 0 0 1-2.663-.804l-.07-.137A4 4 0 0 0 10 5C7.858 5 6.109 6.684 6.005 8.767L6 8.964l.003.17a2 2 0 0 1-1.186 1.863l-.15.059A1.001 1.001 0 0 0 5 13z" />
-                        </svg> 白金蛋糕</h3>
-                    <ul>
-                        <li>會員優惠：9折</li>
-                        <li>升級方式：消費滿$10000元</li>
-                        <li>使用通路：官網、各實體店面</li>
-                        <li>生日禮金：一年期限 </li>
-                        <li>生日禮金：$200元購物金（當月30天有效）</li>
-                    </ul>
-                </article>
+                <div class="memberCard">
+                    <img src="./img/frame1.png" alt="">
+                    <img src="./img/frame2.png" alt="">
+                    <div class="cardIntro">
+                        <h3>一般蛋糕&nbsp;&nbsp;VIP&nbsp;I</h3>
+                        <ul>
+                            <li>會員優惠：無</li>
+                            <li>升級方式：官網、各實體店面加入</li>
+                            <li>會員期限：無期限</li>
+                            <li>生日禮金：無 </li>
+                        </ul>
+                    </div>
+                    <div class="cardImg">
+                        <img src="./img/vip1.svg" alt="">
+                    </div>
+                </div>
+                <div class="memberCard">
+                    <img src="./img/frame1.png" alt="">
+                    <img src="./img/frame2.png" alt="">
+                    <div class="cardIntro">
+                        <h3>銀白蛋糕&nbsp;&nbsp;VIP&nbsp;II</h3>
+                        <ul>
+                            <li>會員優惠：無</li>
+                            <li>升級方式：消費滿 $300 元以上</li>
+                            <li>使用通路：官網、各實體店面</li>
+                            <li>生日禮金：$100 元購物金</li>
+                        </ul>
+                    </div>
+                    <div class="cardImg">
+                        <img src="./img/vip2.svg" alt="">
+                    </div>
+                </div>
+                <div class="memberCard">
+                    <img src="./img/frame1.png" alt="">
+                    <img src="./img/frame2.png" alt="">
+                    <div class="cardIntro">
+                        <h3>黃金蛋糕&nbsp;&nbsp;VIP&nbsp;III</h3>
+                        <ul>
+                            <li>會員優惠：95 折</li>
+                            <li>升級方式：消費滿$6000元</li>
+                            <li>使用通路：官網、各實體店面</li>
+                            <li>會員期限：一年期限 </li>
+                            <li>生日禮金：$100 元購物金</li>
+                        </ul>
+                    </div>
+                    <div class="cardImg">
+                        <img src="./img/vip3.svg" alt="">
+                    </div>
+                </div>
+                <div class="memberCard">
+                    <img src="./img/frame1.png" alt="">
+                    <img src="./img/frame2.png" alt="">
+                    <div class="cardIntro">
+                        <h3>白金蛋糕&nbsp;&nbsp;VIP&nbsp;IV</h3>
+                        <ul>
+                            <li>會員優惠：9 折</li>
+                            <li>升級方式：消費滿 $10000 元</li>
+                            <li>使用通路：官網、各實體店面</li>
+                            <li>會員期限：一年期限 </li>
+                            <li>生日禮金：$200 元購物金</li>
+                        </ul>
+                    </div>
+                    <div class="cardImg">
+                        <img src="./img/vip4.svg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- </div> -->
         <div class="toTop">
             <i class="bi bi-arrow-bar-up"></i>
         </div>
