會員專區修改

--- a/member_logut.html
+++ b/member_logut.html
@@ -18,6 +18,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/rwd.css">
 </head>
 
 <body>
@@ -59,6 +60,7 @@
 
     <main>
         <div class="member-banner">
+            <h2>加入會員<br>可享有更多優惠</h2>
             <a href="./login.html">立即登入以獲取您的會員資訊</a>
         </div>
         <div class="member-level-introduction">
@@ -71,7 +73,7 @@
                         <h3>一般蛋糕&nbsp;&nbsp;VIP&nbsp;I</h3>
                         <ul>
                             <li>會員優惠：無</li>
-                            <li>升級方式：官網、各實體店面加入</li>
+                            <li>升級方式：官網、各實體店面</li>
                             <li>會員期限：無期限</li>
                             <li>生日禮金：無 </li>
                         </ul>
@@ -87,7 +89,7 @@
                         <h3>銀白蛋糕&nbsp;&nbsp;VIP&nbsp;II</h3>
                         <ul>
                             <li>會員優惠：無</li>
-                            <li>升級方式：消費滿 $300 元以上</li>
+                            <li>升級方式：消費滿 $300 元</li>
                             <li>使用通路：官網、各實體店面</li>
                             <li>生日禮金：$100 元購物金</li>
                         </ul>
@@ -103,7 +105,7 @@
                         <h3>黃金蛋糕&nbsp;&nbsp;VIP&nbsp;III</h3>
                         <ul>
                             <li>會員優惠：95 折</li>
-                            <li>升級方式：消費滿$6000元</li>
+                            <li>升級方式：消費滿 $6000 元</li>
                             <li>使用通路：官網、各實體店面</li>
                             <li>會員期限：一年期限 </li>
                             <li>生日禮金：$100 元購物金</li>
