會員專區再次修改

--- a/member_logut.html
+++ b/member_logut.html
@@ -67,8 +67,11 @@
             <h1>會員等級說明</h1>
             <div class="member-level-introduction-center">
                 <div class="memberCard">
-                    <img src="./img/frame1.png" alt="">
-                    <img src="./img/frame2.png" alt="">
+                    <img src="./img/frame1.svg" alt="">
+                    <img src="./img/frame2.svg" alt="">
+                    <div class="cardImg">
+                        <img src="./img/vip1.svg" alt="">
+                    </div>
                     <div class="cardIntro">
                         <h3>一般蛋糕&nbsp;&nbsp;VIP&nbsp;I</h3>
                         <ul>
@@ -78,13 +81,13 @@
                             <li>生日禮金：無 </li>
                         </ul>
                     </div>
-                    <div class="cardImg">
-                        <img src="./img/vip1.svg" alt="">
-                    </div>
                 </div>
                 <div class="memberCard">
-                    <img src="./img/frame1.png" alt="">
-                    <img src="./img/frame2.png" alt="">
+                    <img src="./img/frame1.svg" alt="">
+                    <img src="./img/frame2.svg" alt="">
+                    <div class="cardImg">
+                        <img src="./img/vip2.svg" alt="">
+                    </div>
                     <div class="cardIntro">
                         <h3>銀白蛋糕&nbsp;&nbsp;VIP&nbsp;II</h3>
                         <ul>
@@ -94,13 +97,13 @@
                             <li>生日禮金：$100 元購物金</li>
                         </ul>
                     </div>
-                    <div class="cardImg">
-                        <img src="./img/vip2.svg" alt="">
-                    </div>
                 </div>
                 <div class="memberCard">
-                    <img src="./img/frame1.png" alt="">
-                    <img src="./img/frame2.png" alt="">
+                    <img src="./img/frame1.svg" alt="">
+                    <img src="./img/frame2.svg" alt="">
+                    <div class="cardImg">
+                        <img src="./img/vip3.svg" alt="">
+                    </div>
                     <div class="cardIntro">
                         <h3>黃金蛋糕&nbsp;&nbsp;VIP&nbsp;III</h3>
                         <ul>
@@ -111,13 +114,13 @@
                             <li>生日禮金：$100 元購物金</li>
                         </ul>
                     </div>
-                    <div class="cardImg">
-                        <img src="./img/vip3.svg" alt="">
-                    </div>
                 </div>
                 <div class="memberCard">
-                    <img src="./img/frame1.png" alt="">
-                    <img src="./img/frame2.png" alt="">
+                    <img src="./img/frame1.svg" alt="">
+                    <img src="./img/frame2.svg" alt="">
+                    <div class="cardImg">
+                        <img src="./img/vip4.svg" alt="">
+                    </div>
                     <div class="cardIntro">
                         <h3>白金蛋糕&nbsp;&nbsp;VIP&nbsp;IV</h3>
                         <ul>
@@ -127,9 +130,6 @@
                             <li>會員期限：一年期限 </li>
                             <li>生日禮金：$200 元購物金</li>
                         </ul>
-                    </div>
-                    <div class="cardImg">
-                        <img src="./img/vip4.svg" alt="">
                     </div>
                 </div>
             </div>
