選單功能新增、選單rwd

--- a/login.html
+++ b/login.html
@@ -163,7 +163,7 @@
             </div>
         </div>
     </footer>
-    <script>
+    <!-- <script>
         function setCookie(name, value, days) {
             const expires = new Date();
             expires.setTime(expires.getTime() + days * 24 * 60 * 60 * 1000);
@@ -191,7 +191,7 @@
             const loginForm = document.getElementById('loginForm');
             loginForm.addEventListener('submit', login);
         };
-    </script>
+    </script> -->
     <script src="./js/index.js"></script>
 </body>
 
