--- a/index.html
+++ b/index.html
@@ -35,16 +35,46 @@
             </div>
             <div class="search-bar">
                 <input type="text" placeholder="搜尋">
-                <img src="./img/search.svg" alt="">
+                <img src="./img/search.svg" alt="search">
             </div>
-            <nav>
+            <nav class="nav-large">
                 <ul>
                     <li><a href="./about.html">關於我們</a></li>
                     <li><a href="./product.html">商品資訊</a></li>
                     <li><a href="./member_logut.html">會員專區</a></li>
                     <li><a href="./contact.html">聯絡我們</a></li>
-                    <li><a href="./login.html">登入/註冊</a></li>                    <li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i><span>2</span></a></li>
+                    <li><a href="./login.html">登入/註冊</a></li>
+                    <li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i><span>2</span></a></li>
                 </ul>
+            </nav>
+            <nav class="nav-small">
+                <ul>
+                    <li><a href="./login.html"><i class="fa-solid fa-user"></i></a></li>
+                    <li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i><span>2</span></a></li>
+                    <li><i class="fa-solid fa-bars"></i></li>
+                </ul>
+                <!-- 縮小後的清單 -->
+                <div class="nav-list">
+                    <!-- 遮罩 -->
+                    <div class="nav-cover"></div>
+                    <!-- 清單本體 -->
+                    <div class="menu-wrapper">
+                        <!-- 清單頭部 -->
+                        <div class="menu-header">
+                            <a href="index.html">
+                                <img src="./img/logo.svg" alt="logo">
+                            </a>
+                            <i class="fa-solid fa-xmark"></i>
+                        </div>
+                        <!-- 清單核心 -->
+                        <ul>
+                            <li><a href="./about.html">關於我們</a></li>
+                            <li><a href="./product.html">商品資訊</a></li>
+                            <li><a href="./member_logut.html">會員專區</a></li>
+                            <li><a href="./contact.html">聯絡我們</a></li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </div>
     </header>
