--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <img src="./img/logo.svg" alt="logo">
                 </a>
             </div>
-            <div class="search-bar">
-                <input type="text" placeholder="搜尋">
+            <!-- <div class="search-bar">
+                <input type="text" placeholder="找商品">
                 <img src="./img/search.svg" alt="search">
-            </div>
+            </div> -->
             <nav class="nav-large">
                 <ul>
                     <li><a href="./about.html">關於我們</a></li>
@@ -47,6 +47,8 @@
                     <li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i><span>2</span></a></li>
                 </ul>
             </nav>
+
+
             <nav class="nav-small">
                 <ul>
                     <li><a href="./login.html"><i class="fa-solid fa-user"></i></a></li>
@@ -76,6 +78,9 @@
                     </div>
                 </div>
             </nav>
+
+
+            
         </div>
     </header>
 
