--- a/cart.html
+++ b/cart.html
@@ -251,7 +251,7 @@
             </div>
         </div>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="./js/public.js"></script>
 </body>
 
 </html>
