--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
                     <li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i><span>2</span></a></li>
                 </ul>
             </nav>
-
-
             <nav class="nav-small">
                 <ul>
                     <li><a href="./login.html"><i class="fa-solid fa-user"></i></a></li>
@@ -78,9 +76,6 @@
                     </div>
                 </div>
             </nav>
-
-
-            
         </div>
     </header>
 
@@ -298,6 +293,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/public.js"></script>
 </body>
 
 </html>
