--- a/member_logut.html
+++ b/member_logut.html
@@ -30,10 +30,10 @@
                     <img src="./img/logo.svg" alt="logo">
                 </a>
             </div>
-            <div class="search-bar">
-                <input type="text" placeholder="搜尋">
+            <!-- <div class="search-bar">
+                <input type="text" placeholder="找商品">
                 <img src="./img/search.svg" alt="search">
-            </div>
+            </div> -->
             <nav class="nav-large">
                 <ul>
                     <li><a href="./about.html">關於我們</a></li>
@@ -233,7 +233,7 @@
             </div>
         </div>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="./js/public.js"></script>
 </body>
 
 </html>
