--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
             </div>
         </div>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="./js/public.js"></script>
 </body>
 
 </html>
