--- a/cart2_self.html
+++ b/cart2_self.html
@@ -240,7 +240,7 @@
             </div>
         </div>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="./js/public.js"></script>
 </body>
 
 </html>
