--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
             </div>
         </div>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="./js/public.js"></script>
 </body>
 
 </html>
