--- a/item.html
+++ b/item.html
@@ -206,7 +206,7 @@
             </div>
         </div>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="./js/public.js"></script>
 </body>
 
 </html>
