--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="recommend-product">
                 <div class="product-top">
                     <h1>當月首推</h1>
-                    <a href="./product.html">看更多<i class="fa-solid fa-chevron-right"></i></a>
+                    <a href="./product.html" class="product-top-large">看更多<i class="fa-solid fa-chevron-right"></i></a>
                 </div>
                 <ul class="product-bottom">
                     <li>
@@ -197,6 +197,7 @@
                         <p>NT $ <span>495</span></p>
                     </li>
                 </ul>
+                <a href="./product.html" class="product-top-small">看更多<i class="fa-solid fa-chevron-right"></i></a>
             </div>
         </div>
 
