--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <div class="copyright-text">
                 <div class="copyright-text-left">
                     <p>© 本網站為緯育TibaMe【第94期】前端工程師專業技術養成班學員作品,僅供學習、展示之用途。</p>
-                    <!-- <p>© 圖片素材版權皆歸 深夜裡的法國手工甜點 所有，本專案為個人專題作品，非品牌正式委託。</p> -->
+                    <p>© 圖片素材版權皆歸 深夜裡的法國手工甜點 所有，本專案為個人專題作品，非品牌正式委託。</p>
                 </div>
 
                 <div class="social-account">
