回到頂部樣式修改

--- a/cart2_self.html
+++ b/cart2_self.html
@@ -197,7 +197,7 @@
             </div>
         </div>
         <div class="toTop">
-            <i class="bi bi-arrow-bar-up"></i>
+            <i class="bi bi-arrow-up-short"></i>
         </div>
     </main>
 
