--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
         </div>
 
         <div class="toTop">
-            <i class="bi bi-arrow-bar-up"></i>
+            <i class="bi bi-arrow-up-short"></i>
         </div>
     </main>
 
