--- a/cart.html
+++ b/cart.html
@@ -208,7 +208,7 @@
             </section>
         </div>
         <div class="toTop">
-            <i class="bi bi-arrow-bar-up"></i>
+            <i class="bi bi-arrow-up-short"></i>
         </div>
     </main>
 
