--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
 
         <div class="toTop">
-            <i class="bi bi-arrow-bar-up"></i>
+            <i class="bi bi-arrow-up-short"></i>
         </div>
     </main>
 
