--- a/item.html
+++ b/item.html
@@ -163,7 +163,7 @@
             </section>
         </div>
         <div class="toTop">
-            <i class="bi bi-arrow-bar-up"></i>
+            <i class="bi bi-arrow-up-short"></i>
         </div>
     </main>
 
