--- a/login.html
+++ b/login.html
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class="toTop">
-            <i class="bi bi-arrow-bar-up"></i>
+            <i class="bi bi-arrow-up-short"></i>
         </div>
     </main>
 
