--- a/product.html
+++ b/product.html
@@ -261,7 +261,7 @@
         </div>
 
         <div class="toTop">
-            <i class="bi bi-arrow-bar-up"></i>
+            <i class="bi bi-arrow-up-short"></i>
         </div>
     </main>
 
