加入購物車、跑馬燈字體調整

--- a/item.html
+++ b/item.html
@@ -107,17 +107,20 @@
                 <div class="item-info">
                     <h1>焦糖蘋果布蕾</h1>
                     <p>以青蘋果塊與特製苦甜焦糖細細熬煮，不僅保留蘋果天然酸甜，濃濃焦糖香，與軟軟綿綿的香草布蕾、北海道生乳香緹搭配，吃起來既飽滿又療癒，是少見詢問度特別高的小點心呦！</p>
-                    <b>NT $ 120</b>
+                    <div class="item-price">
+                        <b class="choose-price">NT $ 120</b>
+                        <b>NT $ 700</b>
+                    </div>
                     <i>請選擇尺寸或種類</i>
-                    <ul>
+                    <ul class="item-size">
                         <li class="choose-size">單份</li>
                         <li>一盒（6入）</li>
                     </ul>
                     <div class="add-to-cart">
                         <div class="item-counter">
-                            <span>–</span>
+                            <span class="item-reduce">–</span>
                             <input type="text" value="1">
-                            <span>+</span>
+                            <span class="item-plus">+</span>
                         </div>
                         <span class="add-btn">加入購物車</span>
                     </div>
