商品資訊頁面渲染

--- a/cart.html
+++ b/cart.html
@@ -137,6 +137,10 @@
 
 
                 </table>
+                <div class="buy-info-replace-table">
+                    
+                </div>
+
                 <p>*同品項不同尺寸會依比例切分，例生巧克力塔/十吋 可切分成4個 生巧克力塔/單份．可購量也將依比例換算
                     例如尚可購 2個生巧克力塔/十吋，相當於8個生巧克力塔/單份，以及 1個生巧克力塔/十吋 和 4個 生巧克力塔/單份</p>
             </div>
@@ -144,7 +148,7 @@
             <section class="cart-order-info">
                 <div class="send-info">
                     <div class="send-info-left">
-                        <h1>寄送資訊</h1>
+                        <h1>寄送資訊<i class="fa-solid fa-circle-info"></i></h1>
                         <label for="getWay">取貨方式 *</label>
                         <select name="" id="getWay" required>
                             <option value="自取">自取</option>
