--- a/index.html
+++ b/index.html
@@ -121,56 +121,57 @@
                 <ul class="product-bottom">
                     <li>
                         <div class="product-bottom-img">
-                            <img src="./img/product1.jpg" alt="酒香苦甜布朗尼">
+                            <img src="./img/product1.jpg" alt="當季甜點雙拼（乳酪草莓塔＋提拉米蘇）">
                             <a href="#"></a>
                             <span>加入購物車</span>
                         </div>
-                        <a href="#">酒香苦甜布朗尼</a>
-                        <p>NT $ <span>169</span></p>
+                        <a href="#">當季甜點雙拼（乳酪草莓塔＋提拉米蘇）
+                        </a>
+                        <p>NT $ <span>680</span></p>
                     </li>
                     <li>
                         <div class="product-bottom-img">
-                            <img src="./img/product2.jpg" alt="芒果杯蛋糕">
+                            <img src="./img/product2.jpg" alt="卡士達草莓塔">
                             <a href="#"></a>
                             <span>加入購物車</span>
                         </div>
-                        <a href="#">芒果杯蛋糕</a>
-                        <p>NT $ <span>139</span></p>
+                        <a href="#">卡士達草莓塔</a>
+                        <p>NT $ <span>890</span></p>
                     </li>
                     <li>
                         <div class="product-bottom-img">
-                            <img src="./img/product3.jpg" alt="覆盆子佛手柑卡儂">
+                            <img src="./img/product3.jpg" alt="柚香焙茶栗子塔">
                             <a href="#"></a>
                             <span>加入購物車</span>
                         </div>
-                        <a href="#">覆盆子佛手柑卡儂</a>
+                        <a href="#">柚香焙茶栗子塔</a>
                         <p>NT $ <span>250</span></p>
                     </li>
                     <li>
                         <div class="product-bottom-img">
-                            <img src="./img/product4.jpg" alt="巧克力覆盆子慕斯蛋糕">
+                            <img src="./img/product4.jpg" alt="北海道芒果重乳酪蛋糕">
                             <a href="#"></a>
                             <span>加入購物車</span>
                         </div>
-                        <a href="#">巧克力覆盆子慕斯蛋糕</a>
+                        <a href="#">北海道芒果重乳酪蛋糕</a>
                         <p>NT $ <span>495</span></p>
                     </li>
                     <li>
                         <div class="product-bottom-img">
-                            <img src="./img/product5.jpg" alt="拿破崙千層酥">
+                            <img src="./img/product5.jpg" alt="白色乳酪草莓塔佐法國栗子泥">
                             <a href="#"></a>
                             <span>加入購物車</span>
                         </div>
-                        <a href="#">拿破崙千層酥</a>
+                        <a href="#">白色乳酪草莓塔佐法國栗子泥</a>
                         <p>NT $ <span>230</span></p>
                     </li>
                     <li>
                         <div class="product-bottom-img">
-                            <img src="./img/product6.jpg" alt="檸檬起司乳酪塔">
+                            <img src="./img/product6.jpg" alt="萬丹紅豆抹茶塔">
                             <a href="#"></a>
                             <span>加入購物車</span>
                         </div>
-                        <a href="#">檸檬起司乳酪塔</a>
+                        <a href="#">萬丹紅豆抹茶塔</a>
                         <p>NT $ <span>189</span></p>
                     </li>
                     <li>
@@ -212,15 +213,15 @@
             <ul>
                 <li>
                     <a href="#"><img src="./img/category1.jpg" alt="本月限定塔類甜品"></a>
-                    <a href="#">本月限定塔類甜品</a>
+                    <a href="#">巧克力塔類甜點</a>
                 </li>
                 <li>
                     <a href="#"><img src="./img/category2.jpg" alt="杯子系列蛋糕甜品"></a>
-                    <a href="#">杯子系列蛋糕甜品</a>
+                    <a href="#">水果塔類甜點</a>
                 </li>
                 <li>
                     <a href="#"><img src="./img/category3.jpg" alt="慕斯系列蛋糕甜品"></a>
-                    <a href="#">慕斯系列蛋糕甜品</a>
+                    <a href="#">北海道重乳酪蛋糕</a>
                 </li>
             </ul>
         </div>
