--- a/product.html
+++ b/product.html
@@ -99,9 +99,9 @@
                     <li>
                         <select name="" id="" class="category-selector">
                             <option value="">全部品項</option>
-                            <option value="">本月限定塔類甜品</option>
-                            <option value="">杯子系列蛋糕甜品</option>
-                            <option value="">慕斯系列蛋糕甜品</option>
+                            <option value="">巧克力塔類甜點</option>
+                            <option value="">水果塔類甜點</option>
+                            <option value="">北海道重乳酪蛋糕</option>
                         </select>
                     </li>
                     <li>
@@ -123,7 +123,7 @@
 
                 <!-- 全部商品 -->
                 <ul class="product-container">
-                    <li>
+                    <!-- <li>
                         <div class="product-container-img">
                             <img src="./img/p1.jpg" alt="焦糖蘋果布蕾">
                             <a href="./item.html"></a>
@@ -230,30 +230,33 @@
                         </div>
                         <a href="#">酒漬葡萄超厚層布丁塔</a>
                         <p>NT $ <span>625</span></p>
-                    </li>
+                    </li> -->
                 </ul>
 
                 <!-- 頁數 -->
                 <div class="pages">
                     <ul>
+                        <li class="pages-prev">
+                            <i class="fa-solid fa-chevron-left"></i>
+                        </li>
                         <li class="current">
                             <span>1</span>
                         </li>
                         <li>
-                            <a href="#">2</a>
+                            2
                         </li>
                         <li>
-                            <a href="#">3</a>
+                            3
                         </li>
                         <!-- 頁數超過 5 頁時出現 -->
                         <!-- <li class="more">
                             <span>...</span>
                         </li> -->
                         <li>
-                            <a href="#">4</a>
+                            4
                         </li>
-                        <li>
-                            <a href="#"><i class="fa-solid fa-chevron-right"></i></a>
+                        <li class="pages-next">
+                            <i class="fa-solid fa-chevron-right"></i>
                         </li>
                     </ul>
                 </div>
@@ -330,6 +333,7 @@
             </div>
         </div>
     </footer>
+    <script src="./js/product.js"></script>
     <script src="./js/public.js"></script>
 </body>
 
